RESOLVED FIXED85999
[GTK] WK2 misses WebKitSettings for media playback requiring user gestures and inline playback
https://bugs.webkit.org/show_bug.cgi?id=85999
Summary [GTK] WK2 misses WebKitSettings for media playback requiring user gestures an...
Simon Pena
Reported 2012-05-09 09:21:59 PDT
In the same way as bug #85194, WK2 misses WebKitSettings in order to support media playback requiring user gestures or inline playback. The attached patch provides those settings, and updates TestWebKitSettings to cover the additions.
Attachments
Patch (11.90 KB, patch)
2012-05-09 10:40 PDT, Simon Pena
no flags
Patch (11.93 KB, patch)
2012-05-09 11:23 PDT, Simon Pena
no flags
Simon Pena
Comment 1 2012-05-09 10:40:35 PDT
WebKit Review Bot
Comment 2 2012-05-09 10:43:27 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Review Bot
Comment 3 2012-05-09 11:10:20 PDT
Comment on attachment 140973 [details] Patch Rejecting attachment 140973 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12663061
Simon Pena
Comment 4 2012-05-09 11:23:21 PDT
WebKit Review Bot
Comment 5 2012-05-10 09:37:29 PDT
Comment on attachment 140984 [details] Patch Clearing flags on attachment: 140984 Committed r116652: <http://trac.webkit.org/changeset/116652>
WebKit Review Bot
Comment 6 2012-05-10 09:37:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.